--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,21 +1,24 @@
 .footer {
   width: 100%;
   margin-block-start: 100px;
-  padding: 50px 72px;
+  padding-block: 50px;
   background: url(../../images/footer/footer.jpg) no-repeat;
   background-position: center;
   background-size: cover;
+  color: var(--color-light);
+  font-size: 20px;
+}
+
+.footer__wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 50px;
-  color: var(--color-light);
-  font-size: 20px;
 }
 
 .footer__contacts {
-  width: inherit;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -48,13 +51,5 @@
   .footer__contacts {
     flex-direction: column;
     gap: 20px;
-  }
-}
-
-@media (max-width: 768px) {
-  .footer {
-    padding: 50px 20px;
-    /* align-items: center;
-    text-align: center; */
   }
 }
