--- a/styles/components/menu.css
+++ b/styles/components/menu.css
@@ -12,7 +12,7 @@
 }
 
 .menu__list {
-  width: calc(100vw - 144px);
+  width: calc(100vw);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
@@ -60,7 +60,6 @@
 
 @media (max-width: 768px) {
   .menu__list {
-      width: calc(100vw - 40px);
       grid-template-columns: 1fr;
       gap: 30px;
     }
